  * Updated location of fis-gtm (version number in directory) and vista package
    VCS url.
  * Updated to VistA helper package to the most recent version: 20140106.
  * Added "describe-current-version" target to debian/rules.
  * Fixed name of tar.gz file and git hash in get-orig-source for VistA
    repository.
  * Making progress on database configuration in rules file.
  * Fixed use of environment variables in rules for gtm_dist and call to GDE
    and mupip.
  * Added in rules override for clean.
  * Initial release (Closes: #541242)
  * Fixed lintian warning on Apache 2.0 license in copyright file.
  * Fixed package name in debian/control Provides: field. Lintian warning.
  * Configured CMake to build the binary testing directory.
  * In rules, separating install, configure and build.
  * In rules, started to add management of arch. Mostly x64 so far.
  * In control, added xinetd and ssh as dependencies.
  * In rules, removing .pyc files in clean: target.
  * Started adding deployment scripts to create instances.
  * In rules, added make rule for compiling VistA .m routines into .o files.
  * In control, add meta-package to point to the most recent FOIA release.
    The vista-foia-0.20130405 corresponds to the version of the M routines
    included in the FOIA release of April 5th 2013.
  * In rules, better chain targets for import and then compilation.
  * In control, set Vcs-Browser and Vcs-Git to point to git repo in Alioth.
  * In rules, reorganized build vs config. Leaving compilation only in build.
  * In rules, refining auto_install rule.
  * In rules, remove code to compile .m files. Now moved to CMake itself.
  * In rules, added final installation rule. Targeting debuild expected dir.
  * Added CMake option to precompile all M routines, as part of build.
  * In rules, only installing selected directories. Skipping .o files.
  * In rules, enabled parallel build.

 -- Luis Ibanez <luis.ibanez@kitware.com>  Wed, 4 Jul 2012 17:16:45 -0500