@@ -79,12 +79,12 @@ cd $(VISTA_TESTING_BINARY_DIR) && make)
 
 
 override_dh_auto_install:
-	mkdir -p debian/$(BINPKG)/$(DESTINATION_DIR)
-	cp -r  $(LOCALINSTANCEDIR)/$(VISTA_INSTALL_DIR)/r       debian/$(BINPKG)/$(DESTINATION_DIR)
-	cp -r  $(LOCALINSTANCEDIR)/$(VISTA_INSTALL_DIR)/g       debian/$(BINPKG)/$(DESTINATION_DIR)
-	cp -r  $(LOCALINSTANCEDIR)/$(VISTA_INSTALL_DIR)/lib     debian/$(BINPKG)/$(DESTINATION_DIR)
-	cp -r  $(LOCALINSTANCEDIR)/$(VISTA_INSTALL_DIR)/inet    debian/$(BINPKG)/$(DESTINATION_DIR)
-	cp -r  $(LOCALINSTANCEDIR)/$(VISTA_INSTALL_DIR)/deploy  debian/$(BINPKG)/$(DESTINATION_DIR)
+	mkdir -p debian/$(BINPKG)/$(DESTINATION_DIR)/$(VISTA_FOIA_VERSION)
+	cp -r  $(LOCALINSTANCEDIR)/$(VISTA_INSTALL_DIR)/r       debian/$(BINPKG)/$(DESTINATION_DIR)/$(VISTA_FOIA_VERSION)
+	cp -r  $(LOCALINSTANCEDIR)/$(VISTA_INSTALL_DIR)/g       debian/$(BINPKG)/$(DESTINATION_DIR)/$(VISTA_FOIA_VERSION)
+	cp -r  $(LOCALINSTANCEDIR)/$(VISTA_INSTALL_DIR)/lib     debian/$(BINPKG)/$(DESTINATION_DIR)/$(VISTA_FOIA_VERSION)
+	cp -r  $(LOCALINSTANCEDIR)/$(VISTA_INSTALL_DIR)/inet    debian/$(BINPKG)/$(DESTINATION_DIR)/$(VISTA_FOIA_VERSION)
+	cp -r  $(LOCALINSTANCEDIR)/$(VISTA_INSTALL_DIR)/deploy  debian/$(BINPKG)/$(DESTINATION_DIR)/$(VISTA_FOIA_VERSION)
 
 
 get-orig-source:
